[gd_scene load_steps=7 format=2]

[ext_resource path="res://hsz/ai/provoking/provoking.gd" type="Script" id=1]
[ext_resource path="res://hsz/behaviors/idle/idle.tscn" type="PackedScene" id=2]
[ext_resource path="res://hsz/behaviors/fear_after_chase/fear_after_chase.tscn" type="PackedScene" id=3]
[ext_resource path="res://hsz/behaviors/chase/chase.tscn" type="PackedScene" id=4]
[ext_resource path="res://hsz/behaviors/wander/wander.tscn" type="PackedScene" id=5]
[ext_resource path="res://hsz/utils/random_timer.gd" type="Script" id=6]

[node name="ProvokingAI" type="Node"]
script = ExtResource( 1 )
default_state_path = NodePath("Idle")

[node name="Idle" parent="." instance=ExtResource( 2 )]

[node name="RandomTimer" type="Timer" parent="Idle"]
script = ExtResource( 6 )
interval_base = 1.6
interval_offset = 0.3

[node name="Wander" parent="." instance=ExtResource( 5 )]

[node name="Chase" parent="." instance=ExtResource( 4 )]

[node name="FearAfterChase" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Idle/RandomTimer" to="." method="_on_RandomTimer_timeout"]
